--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/advanced_concepts/single_node_topology.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "790904cd",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -22,7 +21,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf585d6",
    "metadata": {
     "scrolled": true
    },
@@ -33,7 +31,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da57e0dd",
    "metadata": {},
    "source": [
     "If the output is unclear, you can launch a Terminal session by clicking on `File` $\\rightarrow$ Open and following the steps as shown:\n",
@@ -78,7 +75,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93961dbc",
    "metadata": {
     "scrolled": true
    },
@@ -89,7 +85,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0f5d159",
    "metadata": {},
    "source": [
     "The efficiency would likely be higher than before due to less inter-GPU communication (each GPU does more wok instead). Our output is as follows:\n",
@@ -128,7 +123,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "212a8dfc",
    "metadata": {
     "scrolled": true
    },
@@ -139,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83369c1b",
    "metadata": {},
    "source": [
     "Now, let's run the benchmark:"
@@ -148,7 +141,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59eeb793",
    "metadata": {
     "scrolled": true
    },
@@ -159,7 +151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b584f5ef",
    "metadata": {},
    "source": [
     "The first part of the benchmark gives device information and P2P access available from each GPU (similar to `nvidia-smi topo -m` command). Next, the benchmark measures the unidirectional and bidirectional bandwidth and latency with P2P disabled and enabled.\n",
@@ -220,11 +211,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -244,7 +234,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
