--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/streams.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a7c63ff6",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -110,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "003cf80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cc33f19",
    "metadata": {},
    "source": [
     "Validate the implementation by running the binary:"
@@ -128,7 +125,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71d5a98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +133,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442c832a",
    "metadata": {},
    "source": [
     "We tested the code on a DGX-1 system with 8 Tesla V100 16GB GPUs, and we got the following output:\n",
@@ -159,7 +154,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d0fd7b2",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -171,7 +165,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6f5bf5e",
    "metadata": {},
    "source": [
     "[Download the report here](../../source_code/cuda/jacobi_streams_p2p_report.qdrep) and open the report in GUI and measure the total time between two Jacobi iterations as shown below.\n",
@@ -253,7 +246,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b299e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +254,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9b942c7",
    "metadata": {},
    "source": [
     "Validate the implementation by running the binary with and without P2P:"
@@ -271,7 +262,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35e57643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +270,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c70e07a9",
    "metadata": {
     "tags": []
    },
@@ -309,7 +298,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c910f6f-f58c-4d3b-ab37-49dbc4112751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +306,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e330889-77e3-4fe3-9782-b4a13425c9bb",
    "metadata": {},
    "source": [
     "[Download the .qdrep report file](../../source_code/cuda/jacobi_streams_events_p2p_report.qdrep) and open it in the Nsight Systems GUI application:\n",
@@ -351,11 +338,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -375,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
