--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/cuda_aware.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a89881ae",
    "metadata": {},
    "source": [
     "\n",
@@ -94,7 +93,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "782c524a-fc7b-4c7a-803c-a2046724d48a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93fe9e4c-f672-49d2-9c2f-3f6e670ed395",
    "metadata": {},
    "source": [
     "Ensure there are no compilation errors. Now, let us validate the program with 16384$\\times$32768 grid size across 2 nodes and with 16 GPUs:"
@@ -112,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99ee2021-0d2e-4373-807a-5dc712de7a66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +117,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2e98b26-8612-4751-9a9f-6a8b28d53610",
    "metadata": {},
    "source": [
     "You may observe a drop in efficiency. On our DGX-1V system, the results are as follows:\n",
@@ -138,7 +133,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71e8323-f1bc-4932-8a97-561864092406",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -150,7 +144,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e93c240b-95e5-49c5-b479-cebea50d317b",
    "metadata": {},
    "source": [
     "The efficiency should improve. Our results are as follows:\n",
@@ -178,7 +171,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac7ed50c-aff8-4879-9b32-d0bcc97b971c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +180,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "690c6440-213e-4560-bbf2-60a5db9bfe97",
    "metadata": {},
    "source": [
     "Also profile the multi-GPU version for 5K iterations:"
@@ -197,7 +188,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "188d155d-f28c-4a32-80c6-aab41a2ecde6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +197,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "710b4355-1f26-4f4a-8bbe-2c7a96ae5ce3",
    "metadata": {},
    "source": [
     "We ran it for 10K and 25K iterations as we ll and we share the relevant NVTX stats for all these versions:\n",
@@ -248,7 +237,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9a3424-2694-4bf5-962c-45cd4d586e37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +245,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bea7e30-6e4b-46b8-97d0-738a26eb88b1",
    "metadata": {},
    "source": [
     "We share the output from our DGX-1V system:\n",
@@ -273,7 +260,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05d1d256-b6ba-4e0e-ad31-ca14da6a835f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +268,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84fe3d27-bdf4-4257-93ea-1d868f4edc14",
    "metadata": {},
    "source": [
     "¶Our output is as follows:\n",
@@ -333,11 +318,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -357,7 +341,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
