--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/memcpy.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ed9d6f0d-cfa6-4ffd-b970-bee700bf1a90",
    "metadata": {},
    "source": [
     "\n",
@@ -156,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57db8407-a720-4f19-9666-d0b1b37c6a1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +163,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd0ae58-b7bf-432d-8ced-367daaefbc7d",
    "metadata": {},
    "source": [
     "Ensure there are no compilation errors. Now, let us validate the program. \n",
@@ -179,7 +176,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ddb18d3-868f-4dc8-b3c6-7225cc367135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +184,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9bc18c9-a836-4503-a874-327293fd7d0b",
    "metadata": {},
    "source": [
     "We share the partial output from 2 DGX-1 nodes with 8 Tesla V100-16GB each connected by InfiniBand (IB) NICs:\n",
@@ -217,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f874e966-53ad-4251-8059-76697ef6862e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +220,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0765be26-807b-4ee5-ae75-9e9a6a14c293",
    "metadata": {},
    "source": [
     "We can also use the `--map-by ppr:8:node:4:socket` flag. Here, in addition to specifying the number of processes per socket, we also specify the number of processes per node. This should result in the same execution and results. So, run the following command:"
@@ -235,7 +228,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec11f8bf-1948-48d5-8eac-f6a655e1d369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +236,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07f62d8e-3584-414e-9203-e4d24961c2bc",
    "metadata": {},
    "source": [
     "Notice that our efficiency has decreased. We share our partial results:\n",
@@ -260,7 +251,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79fbfcf-ca8a-4e86-9ef2-9c6f3387ddea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +259,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37547338-af62-4329-b65c-9b2c0b45130f",
    "metadata": {},
    "source": [
     "The output may seem cluttered, so let us focus on partial output from ranks 0 and 1:\n",
@@ -286,7 +275,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24c54f2b-28a4-482d-9d53-4cea6aca1f00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +283,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c5791f2-169a-4394-a640-226b365b0ff8",
    "metadata": {},
    "source": [
     "Now, ranks 0 and 1 are bound to the same socket in the same node. Moreover, ranks 3 and 4 are bound to different sockets (as `<procs_per_socket>` is 4) but bound to the same node, as desired.\n",
@@ -326,7 +313,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c461fa-777d-47ab-94d9-e1ac418b9711",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +322,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c89cc9bd-aed4-4ae4-bd5c-ae4698d44d92",
    "metadata": {},
    "source": [
     "[Download the report](../../source_code/mpi/jacobi_memcpy_mpi_report.qdrep) and view it via the GUI. \n",
@@ -381,11 +366,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -405,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
