--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/mpi/multi_node_intro.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "403d97bc",
    "metadata": {},
    "source": [
     "# Learning objectives\n",
@@ -92,7 +91,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe440c7-98dc-4d54-809a-bb56505f057f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +99,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f1e8e6c-68f5-4c8c-8efa-271aa8663246",
    "metadata": {},
    "source": [
     "Now, let us compile the program:"
@@ -110,7 +107,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f074f17f-90fe-4330-9ed4-74f155710443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd02fbfd-8283-4241-a5e1-1fda65bf933b",
    "metadata": {},
    "source": [
     "### Execution\n",
@@ -144,7 +139,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72258137-be6d-45b8-a232-7f3ee70ed11d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +147,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "121340df-bdb7-41e3-8620-80254b4e28cc",
    "metadata": {},
    "source": [
     "You may see some warnings. As long as the output is printed, you can ignore the warnings. In the output, you should see 2 unique ranks ranging (0 and 1) and the node's name like below:\n",
@@ -171,7 +164,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bea8cb38-74ff-480a-84b2-419df867b443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +172,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa026d1c-df9c-43d8-853d-d0b8d7a620ff",
    "metadata": {},
    "source": [
     "The output, excluding warnings, should be as follows (the order of output lines is not important):\n",
@@ -212,11 +203,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -236,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
