--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/cuda/memcpy.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4ddba18",
    "metadata": {},
    "source": [
     "# Learning Objectives\n",
@@ -48,7 +47,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49697bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +55,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62d045bd",
    "metadata": {},
    "source": [
     "`nvidia-smi` utility shows the available GPU on a node, but inside a CUDA program, the number of GPU in the node can be obtained using the `cudaGetDeviceCount(int *count)` function. To perform any task, like running a CUDA kernel, copy operation, etc. on a particular GPU, we use the `cudaSetDevice(int device)` function.\n",
@@ -150,7 +147,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce6dc6ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +155,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "698ab130",
    "metadata": {},
    "source": [
     "Ensure there are no compiler warnings or errors. Validate the implementation by running the binary:"
@@ -168,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50debc4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e276f70",
    "metadata": {},
    "source": [
     "The last couple of lines of the output will give the number and IDs of GPUs used, execution timings, speedup, and efficiency metrics. Review Metrics of Interest section in [single GPU overview](../single_gpu/single_gpu_overview.ipynb) tutorial for more information). We tested the code on a DGX-1 system with 8 Tesla V100 16GB GPUs, and we got the following output:\n",
@@ -197,7 +190,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3187cdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4ac727d",
    "metadata": {},
    "source": [
     "[Download the profiler report here for visualization](../../source_code/cuda/jacobi_memcpy_report.qdrep). In the profiler timeline, the first few seconds denote the single-GPU code running on one of the GPUs. This version is executed so we can compare the multi-GPU version with it. Let's analyze the multi-GPU timeline.\n",
@@ -256,7 +247,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f757d16c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +255,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7afbc209",
    "metadata": {},
    "source": [
     "The `topo` sub-command requests information on the GPU communication topology, `-p2p` flag requests P2P status, and `r` asks whether P2P reads are supported. Change `r` to `w` to check whether writes are supported. We share our output on a DGX-1 system with 8 Tesla V100s, focusing on the capabilities of GPU 0:\n",
@@ -280,7 +269,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1250c02c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +277,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d84934b",
    "metadata": {},
    "source": [
     "In our DGX-1 system, the result is similar as before. Even if P2P via NVLink is not supported on your system, as long as `-p2p r` and `-p2p w` are supported between GPUs, P2P capability is available.\n",
@@ -308,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e8da79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +303,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd648c93",
    "metadata": {},
    "source": [
     "Ensure there are no compiler warnings or errors. Validate the implementation by running the binary with P2P enabled:"
@@ -326,7 +311,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed251978",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +319,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1acc2cc0",
    "metadata": {},
    "source": [
     "The output we got on our DGX-1 system is:\n",
@@ -355,7 +338,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adf3e8fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +346,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b801eb0",
    "metadata": {},
    "source": [
     "[Download the profiler report here for visualization](../../source_code/cuda/jacobi_memcpy_p2p_report.qdrep).\n",
@@ -396,11 +377,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -420,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
