--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nccl/nccl.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nccl/nccl.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e96ca37c-9955-4b7a-83ff-c99761bb51e9",
    "metadata": {},
    "source": [
     "# The NVIDIA Collectives Communications Library (NCCL)\n",
@@ -157,7 +156,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f82365b-d9cb-4820-ba47-5442ae46d052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +164,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01af8f39-1d49-4edf-99ea-bb2573ab7109",
    "metadata": {},
    "source": [
     "Ensure that there are no errors. Now, validate your implementation by running the program binary across 2 nodes on 16 GPUs with $16K\\times32K$ grid size:"
@@ -175,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "265a9626-8f0e-4db6-ad1f-0071bbec4ea4",
    "metadata": {
     "tags": []
    },
@@ -186,7 +182,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6674e307-f787-4a3d-92bd-a316421e347f",
    "metadata": {},
    "source": [
     "We share the partial ouput from our DGX-1V system:\n",
@@ -202,7 +197,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6add335-d5f1-4fc4-990f-03cd961889d3",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -214,7 +208,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5aefcba-baa5-453c-bc79-e84d78676e96",
    "metadata": {},
    "source": [
     "Our output is as follows:\n",
@@ -236,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41d69d0a-9265-4115-aaf8-02526cdc3cb0",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -249,7 +241,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d197bb8c-6fe0-4afa-831a-96b320b936fd",
    "metadata": {},
    "source": [
     "Downlaod the report from [here](../../source_code/nccl/jacobi_nccl_report.qdrep). On the cell output above, view the NVTX Push-Pop stats. NCCL has already been instrumented using NVTX annotations so we don't need to add our own. However, since NCCL communication calls are asynchronous with respect to the host and execute mostly on the GPU, NVTX stats are not very helpful. \n",
@@ -292,11 +283,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -316,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
