--- a/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
+++ b/hpc/multi_gpu_nways/labs/CFD/English/C/jupyter_notebook/nvshmem/nvshmem.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b016bc32-95ed-4298-a475-0b2209ec8c1a",
    "metadata": {},
    "source": [
     "# The NVSHMEM Library\n",
@@ -164,7 +163,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4014e6ed-f149-4dff-a2a5-ff153dd837c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +171,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a850fb91-550c-4c4b-b138-a668e9567f87",
    "metadata": {},
    "source": [
     "Now, run the program using `mpirun` command with 4 ranks and 1 rank per socket:"
@@ -182,7 +179,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e749dba4-d43f-46ec-91ea-2c89ac573346",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +187,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26143083-365b-4812-b224-bd4031a2602d",
    "metadata": {},
    "source": [
     "Ensure that the output is consistent with the explanation provided above.\n",
@@ -291,7 +286,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7accf7-086d-4bd3-a306-386cc748b453",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +294,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "442de3fb-0217-405d-aff4-c07f90f5835e",
    "metadata": {},
    "source": [
     "Ensure that there are no errors. Now, run the program with 16 GPUs across 2 nodes for $16K\\times32K$ grid size:"
@@ -309,7 +302,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eeffc5c3-8ddc-4ed9-8b5a-d5c4f8553522",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -321,7 +313,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbee757b-4b55-433c-9888-db990c393f69",
    "metadata": {},
    "source": [
     "We share the partial output from our DGX-1V system:\n",
@@ -337,7 +328,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b1d0002-39b8-4fd6-a954-b9997bff7eb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +336,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a8c955c-5acc-4e4b-af16-81d14482a6b6",
    "metadata": {},
    "source": [
     "Our partial output is as follows:\n",
@@ -370,7 +359,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4e34ffe-035f-4611-b0d0-862e5942a630",
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -384,7 +372,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b62965-149a-43a3-9d12-d1919cbadefd",
    "metadata": {},
    "source": [
     "Download the report from [here](../../source_code/nvshmem/jacobi_nvshmem_report.dqrep).Notice that most NVSHMEM calls are available in NVTX Push-Pop stats on the CLI output. Open `.qdrep` file in the GUI to view the Timeline:\n",
@@ -411,11 +398,10 @@
     "* [Code: Multi-GPU Programming Models](https://github.com/NVIDIA/multi-gpu-programming-models)\n",
     "* [Code: GPU Bootcamp](https://github.com/gpuhackathons-org/gpubootcamp/)\n",
     "\n",
-    "Don't forget to check out additional [OpenACC Resources](https://www.openacc.org/resources) and join our [OpenACC Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
+    "Don't forget to check out additional [Open Hackathons Resources](https://www.openhackathons.org/s/technical-resources) and join our [OpenACC and Hackathons Slack Channel](https://www.openacc.org/community#slack) to share your experience and get more help from the community.\n",
     "\n",
-    "## Licensing \n",
-    "\n",
-    "This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0)."
+    "## Licensing\n",
+    "Copyright © 2022 OpenACC-Standard.org.  This material is released by OpenACC-Standard.org, in collaboration with NVIDIA Corporation, under the Creative Commons Attribution 4.0 International (CC BY 4.0). These materials may include references to hardware and software developed by other entities; all applicable licensing and copyrights apply.\n"
    ]
   }
  ],
@@ -435,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
